[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
hdp-primitives = { git = "https://github.com/HerodotusDev/hdp.git", branch = "refact-fetcher" }
hdp-core = { git = "https://github.com/HerodotusDev/hdp.git", branch = "refact-fetcher" }
hdp-provider = { git = "https://github.com/HerodotusDev/hdp.git", branch = "refact-fetcher" }
thiserror = "1.0.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.0"
tracing = "0.1"
